# simple-terminal-chess

./: .gitignore  CMakeLists.txt  CMakeLists.txt-old  LICENSE  README.md  TODO.md  scenarios_visualization.md
src/: BasicGameConfiguration.cc  BasicGameConfiguration.hh  BishopMoveRequester.cc  BishopMoveRequester.hh  Board.cc  Board.hh  BoardComparer.cc  BoardComparer.hh  BoardDefinitions.cc  BoardDefinitions.hh  BoardPosition.cc  BoardPosition.hh  BoardPrinter.cc  BoardPrinter.hh  CMakeLists.txt  CommandInterface.hh  CommandManager.hh  CommandQuit.cc  CommandQuit.hh  CommandUnrecognized.cc  CommandUnrecognized.hh  GameConfigurationInterface.hh  GameManager.cc  GameManager.hh  GameResources.cc  GameResources.hh  KingMoveRequester.cc  KingMoveRequester.hh  KnightMoveRequester.cc  KnightMoveRequester.hh  MoveProposalAnalysis.cc  MoveProposalAnalysis.hh  MoveRequester.cc  MoveRequester.hh  MoveResult.cc  MoveResult.hh  Parser.cc  Parser.hh  ParserInterface.hh  PawnMoveRequester.cc  (+17 more)
src/Board/: Board.cc  Board.hh  BoardComparer.cc  BoardDefinitions.cc  BoardPosition.cc  Comparer.cc  Comparer.hh  Definitions.cc  Definitions.hh  MoveResult.cc  MoveResult.hh  Piece.cc  Piece.hh  PieceDescription.cc  PieceDescription.hh  Position.cc  Side.cc  Side.hh
src/Command/: BasicManager.cc  BasicManager.hh  CommandInterface.hh  CommandQuit.hh  CommandUnrecognized.cc  Help.cc  Help.hh  Manager.hh  ManagerInterface.hh  Quit.cc  Quit.hh
src/Input/: ParsedInput.cc  ParsedInput.hh  Parser.cc  Parser.hh  ParserInterface.hh
src/Output/: BoardPrinter.cc  BoardPrinter.hh  Printer.cc
src/Resources/: GameResources.cc  GameResources.hh  GameResourcesInterface.hh
src/Rules/: BishopMoveRequester.cc  BishopMoveRequester.hh  (+16 more)
tst/: BasicCommandManager-test.cc  BishopMoveRequester-test.cc  Board-test.cc  BoardComparer-test.cc  BoardPosition-test.cc  BoardPrinter-test.cc  CMakeLists.txt  CommandHelp-test.cc  CommandQuit-test.cc  GameManager-test.cc  KingMoveRequester-test.cc  MoveRequester-test.cc  MoveResult-test.cc  Parser-test.cc  PawnMoveRequester-test.cc  Piece-test.cc  PieceDescription-test.cc  PieceMoverAux-test.cc  Printer-test.cc  QueenMoveRequester-test.cc  RookMoveRequester-test.cc  Side-test.cc  VerySimpleMessageManager-test.cc
(+19 files in other folders)
