CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(Chess VERSION 1.0)

SET(CMAKE_CXX_FLAGS "-std=c++17 -Wall")
SET(CMAKE_EXE_LINKER_FLAGS " -std=c++17 -Wall -fPIC")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(CMAKE_CXX_CPPCHECK "cppcheck")

INCLUDE_DIRECTORIES(src)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tst)
ADD_SUBDIRECTORY(lib/googletest)